--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "CSE JnU Auth Client",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
